Levantamento de interface da tela de login.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-light header-navbar">
+  <a href="login">
+    <img src="../../../assets/img/delinea-logo-branco.png" class="logo-header">
+  </a>
+</nav>
+<hr class="header-line">
