--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,25 @@
-<p>
-  login works!
-</p>
+<body class="login">
+  <app-header></app-header>
+  <br>
+  <div class="card section col-md-3 offset-md-4">
+    <h1 class="login-title">Prova Delinea</h1>
+    <img src="../../../assets/img/logo.png" alt="Delínea" class="img-thumbnail logo-login">
+    <div class="card-body">
+        <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">@</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Usuário" aria-label="Usuario" aria-describedby="basic-addon1">
+      </div>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">#</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Senha" aria-label="Password" aria-describedby="basic-addon1">
+      </div>
+      <button type="submit" class="btn btn-primary">Entrar</button>
+      <button type="button" class="btn btn-secondary">Cadastrar-se</button>
+    </div>
+  </div>
+  <app-footer></app-footer>
+</body>
