Ajustes finais de interface.

--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -1,3 +1,2 @@
-<p>
-  edit works!
-</p>
+<app-register-model [title]="title"></app-register-model>
+<app-footer [footerStyleForm]="footerStyleForm"></app-footer>
