--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,5 +2,6 @@
   <a href="login">
     <img src="../../../assets/img/delinea-logo-branco.png" class="logo-header">
   </a>
+  <p class="user-logged-header"><i class="fas fa-user icon-user-head"></i> Usuário </p>
 </nav>
 <hr class="header-line">
