--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,3 +1,2 @@
-<p>
-  register works!
-</p>
+<app-register-model [title]="title"></app-register-model>
+<app-footer [footerStyleForm]="footerStyleForm"></app-footer>
