--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="page-footer font-small footer-page">
-  <div class="footer-copyright text-center py-3">© 2019 Desenvolvido por: Roberta Melo</div>
+<footer class="page-footer font-small {{footerStyleForm}} {{footerStyleLogin}}">
+  <div class="footer-copyright text-center py-3">© 2019 Desenvolvido por Roberta Melo</div>
 </footer>
