--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,141 @@
   max-height: 500px;
   text-align: center;
   margin-top: 2%;
-  left: 4%;
+  left: 3%;
   border: 0;
   -webkit-box-shadow: 0px 0px 5px 0px #525252;
   -moz-box-shadow: 0px 0px 5px 0px #525252;
   box-shadow: 0px 0px 5px 0px #525252;
+}
+
+.title-login {
+  padding-top: 20px;
+  padding-bottom: 5px;
+  margin-top: 27%;
+  text-align: center;
+  color: #999898;
+  display: block;
+  font-family: "Montserrat", sans-serif;
+}
+
+.title-register {
+  padding-top: 0;
+  padding-bottom: 5px;
+  margin-top: 0;
+  text-align: center;
+  color: #999898;
+  display: block;
+  font-family: "Montserrat", sans-serif;
+}
+
+.title-list {
+  padding-top: 0;
+  padding-bottom: 5px;
+  margin-top: 0;
+  text-align: center;
+  color: #999898;
+  display: block;
+  font-family: "Montserrat", sans-serif;
+}
+
+.button-primary-login {
+  width: 170px;
+  height: 40px;
+  margin-top: 5%;
+  margin-left: 5px;
+  background-color: #A8CF45;
+  border: 0;
+  float: 0;
+}
+
+.button-secondary-login {
+  width: 170px;
+  height: 40px;
+  margin-top: 5%;
+  margin-left: 5px;
+  background-color: #00B0F0;
+  border: 0;
+  float: 0;
+}
+
+.button-primary-register {
+  width: 170px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: #A8CF45;
+  border: 0;
+  float: right;
+}
+
+.button-secondary-register {
+  width: 170px;
+  height: 40px;
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: #999898;
+  border: 0;
+  float: right;
+}
+
+.card-register {
+  margin-top: 2%;
+  transform: translate(70%);
+  width: 40%;
+  -webkit-box-shadow: 0px 0px 5px 0px #9e9e9e;
+  -moz-box-shadow: 0px 0px 5px 0px #9e9e9e;
+  box-shadow: 0px 0px 5px 0px #9e9e9e;
+}
+
+.card-list {
+  margin-top: 2%;
+  transform: translate(38%);
+  width: 60%;
+  -webkit-box-shadow: 0px 0px 5px 0px #9e9e9e;
+  -moz-box-shadow: 0px 0px 5px 0px #9e9e9e;
+  box-shadow: 0px 0px 5px 0px #9e9e9e;
+}
+
+.header-line {
+  background-color: #A8CF45;
+  margin-top: 3px;
+  height: 4px;
+  padding-top: 0;
+  border: 0;
+}
+
+.form-line {
+  background-color: #A8CF45;
+  margin-top: 3px;
+  height: 1px;
+  padding-top: 0;
+  border: 0;
+}
+
+.footer-login {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 25px;
+  align-content: bottom;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #999898;
+  background-color: #FFFF;
+}
+
+.footer-form {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 25px;
+  align-content: bottom;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: #FFFF;
+  background-color: #999898;
 }
 
 .login {
@@ -30,41 +160,35 @@
   transform: translate(0, -30%);
 }
 
-.btn {
-  margin-top: 5%;
-  margin-left: 5px;
-  width: 170px;
-  height: 40px;
-}
-
 .header-navbar {
-  background-color: #6b6b6b;
+  background-color: #999898;
   height: 60px;
 }
 
-.header-line {
-  background-color: #A8CF45;
-  margin-top: 3px;
-}
-
-.login-title {
-  margin-top: 25%;
-  padding-top: 30px;
-  padding-bottom: 10px;
-  text-align: center;
-  color: #6b6b6b;
-  display: block;
-}
-
-.footer-page {
+.user-logged-header {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 0 25px;
-  align-content: bottom;
+  padding: 0 40px;
   position: absolute;
-  bottom: 0;
-  width: 100%;
+  width: 98%;
+  font-size: 20px;
+  color: white;
+  font-style: bold;
+}
+
+.icon-user-head {
+  margin-right: 5px;
+}
+
+.icon-table {
+  padding-right: 5px;
+  align-content: center;
+  align-items: center;
+}
+
+table {
+  margin: 5px 5px 0px 5px;
 }
 
 /*# sourceMappingURL=styles.css.map */
