Adicionado camada de serviço.

--- a/src/app/pages/edit/edit.component.html
+++ b/src/app/pages/edit/edit.component.html
@@ -1,2 +1,2 @@
-<app-register-model [title]="title"></app-register-model>
+<app-register-model [title]="title" [candidate]="candidate"></app-register-model>
 <app-footer [footerStyleForm]="footerStyleForm"></app-footer>
